--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,28 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.4.31'
+buildscript {
+    ext {
+        kotlinVersion = '1.4.31'
+        springBootVersion = '2.4.4'
+    }
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-noarg:$kotlinVersion")
+    }
 }
 
-group 'org.example'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+group 'firmenich-rpn'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -11,4 +31,14 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
+
+}
+
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs = ["-Xjsr305=strict"]
+        jvmTarget = "11"
+    }
 }
