--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,17 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation('org.jetbrains.kotlin:kotlin-stdlib')
     implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.34.0'
+    implementation("com.github.gwenn:sqlite-dialect:0.1.2")
+    implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
 
+    // Testing Dependencies
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0')
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 compileKotlin {
