--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.properties.hibernate.dialect=org.sqlite.hibernate.dialect.SQLiteDialect
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
